# GSAW

./: .clang-format  .gitignore  CMakeLists.txt  FEATURE_TODO.md  build_debug.bat  build_debug.sh  build_release.bat  build_release.sh
include/audio/: Arrangement.hpp  AudioEngine.hpp  AudioLayer.hpp  Channel.hpp  ChannelRack.hpp  EffectBinding.hpp  Ids.hpp  Pattern.hpp  PitchUtils.hpp  Transport.hpp
include/components/: BrowserItem.hpp  BrowserPanel.hpp  ChannelRackView.hpp  EffectStrip.hpp  MixerView.hpp  Playlist.hpp  StereoMeterElement.hpp
src/: main.cpp
src/audio/: AudioEngine.cpp  AudioLayer.cpp  Channel.cpp  ChannelRack.cpp  EffectBinding.cpp  Pattern.cpp  PitchUtils.cpp  Transport.cpp
src/components/: BrowserItem.cpp  BrowserPanel.cpp  ChannelRackView.cpp  EffectStrip.cpp  MixerView.cpp  StereoMeterElement.cpp
